; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun4i_tcon.c_sun5i_a13_tcon_set_mux.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun4i_tcon.c_sun5i_a13_tcon_set_mux.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sun4i_tcon = type { i32 }
%struct.drm_encoder = type { i64 }

@DRM_MODE_ENCODER_TVDAC = common dso_local global i64 0, align 8
@SUN4I_TCON_MUX_CTRL_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sun4i_tcon*, %struct.drm_encoder*)* @sun5i_a13_tcon_set_mux to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sun5i_a13_tcon_set_mux(%struct.sun4i_tcon* %0, %struct.drm_encoder* %1) #0 {
  %3 = alloca %struct.sun4i_tcon*, align 8
  %4 = alloca %struct.drm_encoder*, align 8
  %5 = alloca i32, align 4
  store %struct.sun4i_tcon* %0, %struct.sun4i_tcon** %3, align 8
  store %struct.drm_encoder* %1, %struct.drm_encoder** %4, align 8
  %6 = load %struct.drm_encoder*, %struct.drm_encoder** %4, align 8
  %7 = getelementptr inbounds %struct.drm_encoder, %struct.drm_encoder* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @DRM_MODE_ENCODER_TVDAC, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 1, i32* %5, align 4
  br label %13

12:                                               ; preds = %2
  store i32 0, i32* %5, align 4
  br label %13

13:                                               ; preds = %12, %11
  %14 = load %struct.sun4i_tcon*, %struct.sun4i_tcon** %3, align 8
  %15 = getelementptr inbounds %struct.sun4i_tcon, %struct.sun4i_tcon* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @SUN4I_TCON_MUX_CTRL_REG, align 4
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @regmap_write(i32 %16, i32 %17, i32 %18)
  ret i32 %19
}

declare dso_local i32 @regmap_write(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
